# stm32-renode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  linker.ld
.devcontainer/: Dockerfile  devcontainer.json
experiments/: CMakeLists.txt  linker.ld
experiments/src/: add.c  add.h  main.c  startup.c
renode_board/: add-peripherals.repl  stm32f4_discovery.resc
src/: main.c  startup.c  stm32f407xx.h
